--- a/ITZWebClientApp/Components/Forge/ForgeDatePicker.razor
+++ b/ITZWebClientApp/Components/Forge/ForgeDatePicker.razor
@@ -1,4 +1,4 @@
-﻿<div class="input-group px-2">
+﻿<div class="input-group input-group-sm px-2">
     <div class="input-group-prepend">
         <label class="input-group-text" for="@Id">@Name</label>
     </div>
