--- a/ITZWebClientApp/Components/UI/PropertySelector.razor
+++ b/ITZWebClientApp/Components/UI/PropertySelector.razor
@@ -8,7 +8,7 @@
     int indx = -1;
 }
 
-<div class="input-group px-2">
+<div class="input-group input-group-sm px-2">
     <div class="input-group-prepend">
         <label class="input-group-text" for="queryTypeSelector">@PropertyName</label>
     </div>
